# quick_tracing

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: build-and-test.yml  release.yaml
quick_tracing/: Cargo.toml  readme.md
quick_tracing/examples/: logger.rs
quick_tracing/src/: builder.rs  lib.rs
quick_tracing_derive/: Cargo.toml  readme.md
quick_tracing_derive/src/: lib.rs
