[workspace.package]
authors = ["SARDONYX"]
version = "0.1.2"
license = "MIT"
description = "A simple library to easily start tracing."
repository = "https://github.com/SARDONYX-sard/quick_tracing" # NOTE: Without it, CLI & CI build will error.
documentation = "https://docs.rs/quick_tracing"
homepage = "https://github.com/SARDONYX-sard/quick_tracing"
rust-version = "1.69"
edition = "2021"

[workspace]
members = ["quick_tracing", "quick_tracing_derive"]
default-members = ["quick_tracing"]
resolver = "2"
