[package]
name = "quick_tracing"
description = "A simple library to easily start tracing."
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick_tracing_derive = { path = "../quick_tracing_derive", optional = true }
tracing = "0.1.40"                                                           # Logger
tracing-appender = "0.2.3"                                                   # Log file
tracing-subscriber = "0.3.18"                                                # Log starter

[features]
default = []
derive = ["dep:quick_tracing_derive"]

[[example]]
name = "logger"
required-features = ["derive"]
