[package]
name = "quick_tracing"
description = "A simple library to easily start tracing."
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords = ["tracing", "init"]
include = ["src/", "examples/"]
readme = "./readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick_tracing_derive = { version = "0.1.0", optional = true }
tracing = "0.1.40"                                            # Logger
tracing-appender = "0.2.3"                                    # Log file
tracing-subscriber = "0.3.18"                                 # Log starter

[features]
default = []
derive = ["dep:quick_tracing_derive"]

[[example]]
name = "logger"
required-features = ["derive"]
