[package]
name = "quick_tracing_derive"
description = "A simple library to easily start tracing.(derive)"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.63", features = ["full", "extra-traits"] }
quote = "1.0.36"
deluxe = "0.5.0"                                                  # attribute macro easy build
