[package]
name = "quick_tracing_derive"
description = "A simple library to easily start tracing.(derive)"
edition = "2021"
authors.workspace = true
version = "0.1.3"
license.workspace = true
repository.workspace = true
keywords = ["tracing", "init", "derive"]
autobenches = true
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"             # attribute macro easy build
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.63" }
